Bug 1671601 - Add temporary suppression. r=Gankro

Depends on D94287

Differential Revision: https://phabricator.services.mozilla.com/D94288